2012-12-02  Morphe  <Morphe@Morphe-PC>

	* src\Window\Window.cpp (Window::WndProc): Used move ctor instead of copy in ERASEBKGND
	* src\Widget\Widget.cpp (Widget::Widget): Ctor with size and style was using WidgetStyle::none instead of style
	(Widget::getParent): Implemented

2012-12-01  Morphe  <Morphe@Morphe-PC>

	* src\Window\ThemedDrawer.cpp (Drawing::ThemedDrawer::drawThemedEdges): Impleneted
	* src\Window\Window.cpp (Window::TrackMouseEvent): Moved from URLWnd
	* src\Window\Drawer.cpp (Drawer::getDefaultGuiFont): Changed to recieve font from SystemParametersInfo
	* src\Widget\Widget.h: Added mouse events for Widget class

2012-11-30  Morphe  <Morphe@Morphe-PC>

	* src\GeneralControls\Tabs\Tab.cpp (Tab::getThisWidget): Changed dynamic_cast to C-cast, since check is done in ctor
	(Tab::changeController): Implemented changeController
	(Tab::Tab): Using dynamic_cast to check for base merged class ! Testing required

2012-11-30  Morphe  <Morphe@Morphe-PC>

	* ChangeLog: Created new changelog
	